--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,11 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500&family=Roboto+Condensed&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500&family=PT+Sans+Narrow&family=Roboto+Condensed&display=swap"
         rel="stylesheet">
+
+
     <title>React App</title>
 </head>
 
